# LobbyLib

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  chat_server.cpp  lobby_server.cpp
include/: LobbyServer.h
include/LobbyLib/: LobbyLib.h
src/: CMakeLists.txt  LobbyLib.cpp  LobbyServer.cpp
